[project]
authors = [{ name = "Johannes Koester", email = "johannes.koester@uni-due.de" }]
name = "srptn"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "streamlit>=1.45.1,<2",
    "humanfriendly>=10.0,<11",
    "libtmux>=0.46.1,<0.47",
    "snakedeploy>=0.11.0,<0.12",
    "snakemake>=9.5.1,<10",
    "streamlit-ace>=0.1.1,<0.2",
    "packaging>=21.0,<22.0",
    "setuptools>=80.8.0,<81"
, "streamlit-tags>=1.2.8,<2", "polars>=1.30.0,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
srptn = { path = ".", editable = true }

[tool.pixi.dependencies]
tmux = ">=3.5,<4"

[tool.pixi.feature.dev]
pypi-dependencies = {pytest = "*", ruff = "*", pyright = "*"}

[tool.pixi.environments]
dev = ["dev"]

[tool.pixi.tasks]
srptn = "streamlit run src/srptn/home.py"
tests = "pytest -v"
fmt = "ruff format src tests"
lint = "ruff check src tests && pyright src tests"
